hphp/hack/test/typecheck/invalid_php7_anon_fn.php.exp
ERROR: File "invalid_php7_anon_fn.php", line 4, characters 20-20:
Bad signature: use(...) should occur after the type (Parsing[1002])
ERROR: File "invalid_php7_anon_fn.php", line 4, characters 22-37:
Cannot use collection initialization for non-collection class. (Parsing[1002])
ERROR: File "invalid_php7_anon_fn.php", line 4, characters 20-20:
Unbound name: `:` (a global constant) (Naming[2049])
ERROR: File "invalid_php7_anon_fn.php", line 4, characters 22-24:
Unexpected collection type `int` (Naming[2013])
ERROR: File "invalid_php7_anon_fn.php", line 4, characters 20-20:
Unbound global constant (Typing) (Typing[4106])
